--- a/Assignment1/program4.html
+++ b/Assignment1/program4.html
@@ -13,13 +13,13 @@
                 font-family:tahoma;
             }
             body p1{
-                font-family:tahoma;
+                font-family:Arial, Helvetica, sans-serif;
             }
             body p2{
-                font-family:tahoma;
+                font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
             }
             body p3{
-                font-family:tahoma;
+                font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
             }
             
 
@@ -27,3 +27,4 @@
 
     </BODY>
 </HTML>
+
